[package]
name = "moon_wallet_program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
 

[profile.release]
overflow-checks = true
lto = "fat"          
codegen-units = 1     
opt-level = "z"      
strip = true          
panic = "abort"      