[package]
name = "moon_wallet_program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
sha2 = "0.10.8"  # Thêm thư viện SHA-256


[profile.release]
overflow-checks = true
lto = "fat"           # Link time optimization
codegen-units = 1     # Parallel code generation units
opt-level = "z"      # Highest size optimization
strip = true          # Strip symbols from binary
panic = "abort"       # Remove panic unwinding code